# dojo

./: Cargo.toml
crates/dojo-lang/src/: plugin.rs
crates/dojo-lang/src/inline_macros/: mod.rs
crates/dojo-lang/src/semantics/: tests.rs
crates/dojo-test-utils/src/: sequencer.rs
crates/katana/core/: Cargo.toml
crates/katana/core/src/: sequencer.rs
crates/katana/core/src/backend/: mod.rs
crates/katana/core/src/service/: block_producer.rs  mod.rs
crates/katana/core/src/service/messaging/: service.rs
crates/katana/executor/: Cargo.toml
crates/katana/executor/src/: abstraction.rs
crates/katana/executor/src/implementation/: mod.rs
crates/katana/executor/src/implementation/blockifier/: mod.rs  output.rs  state.rs  utils.rs
crates/katana/executor/src/implementation/sir/: mod.rs  output.rs  state.rs  utils.rs
crates/katana/rpc/rpc-api/src/: lib.rs
crates/katana/rpc/rpc/src/: lib.rs  starknet.rs
crates/katana/rpc/rpc/tests/: torii.rs
crates/katana/storage/provider/src/traits/: env.rs
