[package]
description = "Katana execution engine. This crate provides implementations for executing transactions."
edition.workspace = true
name = "katana-executor"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katana-primitives.workspace = true
katana-provider.workspace = true

anyhow.workspace = true
auto_impl = "1.1.0"
convert_case.workspace = true
derive_more.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
starknet.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
tracing.workspace = true

# blockifier deps
blockifier = { workspace = true, optional = true }

# starknet_in_rust deps
cairo-lang-sierra = { workspace = true, optional = true }
sir = { workspace = true, optional = true }
starknet-types-core = { workspace = true, optional = true }

[features]
default = [ "blockifier", "sir" ]

blockifier = [ "dep:blockifier", "katana-primitives/blockifier" ]
native = [ "sir", "sir/cairo-native" ]
sir = [ "dep:sir", "dep:starknet-types-core" ]
